--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "nodejs-practice",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "3.0.6",
-    "hjs": "*",
-    "less-middleware": "*"
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "hjs": "~0.0.6",
+    "less-middleware": "~2.2.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
