--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "less-middleware": "~2.2.0",
     "morgan": "~1.7.0",
+    "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.3.0"
   }
 }
