--- a/package.json
+++ b/package.json
@@ -6,14 +6,33 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
+    "gulp-uglifycss": "^1.0.8",
     "jade": "~1.11.0",
     "less-middleware": "~2.2.0",
-    "morgan": "~1.7.0",
-    "pug": "^2.0.0-beta11",
-    "serve-favicon": "~2.3.0"
-  }
+    "morgan": "~1.8.1",
+    "multer": "^1.3.0",
+    "pug": "^2.0.0-beta9",
+    "serve-favicon": "~2.4.2"
+  },
+  "description": "This is the project for nodejs practice",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pedoe/Nodejs_Practice.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pedoe/Nodejs_Practice/issues"
+  },
+  "homepage": "https://github.com/pedoe/Nodejs_Practice#readme"
 }
