--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "gulp-uglifycss": "^1.0.8",
